--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -22,5 +22,19 @@ jobs:
           pip install -r requirements.txt
           
       - name: execute our script
-            
+        env: 
+          SOME_SECRET: ${{ secrets.SOME_SECRET }}
+        run: python main.py
+        
+      - name: commit files
+        run : |
+          git config --local use.email "action@github.com"
+          git config --local user.name "Github Action"  
+          git add -A
+          
+      - name: push changes 
+        uses: ad-m/github-psh-action@v0.6.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: main      
 
