--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,7 +2,7 @@ name: run main.py # file name
 
 on:
   schedule: 
-    - cron: '0 */2 * * *' # runs every 2 hours
+    - cron: '*/2 * * * *' # runs every 2 hours
 
 jobs:
   build:
