--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,7 +2,7 @@ name: run main.py # file name
 
 on:
   schedule: 
-    - cron: '*/2 * * * *' # runs every 2 hours
+    - cron: '*/2 * * * *' # runs every 2 minutes
 
 jobs:
   build:
@@ -14,7 +14,7 @@ jobs:
       - name: setup python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.13'
+          python-version: '3.12'
           
       - name : install python packages
         run: |
@@ -33,8 +33,8 @@ jobs:
           git add -A
           
       - name: push changes 
-        uses: ad-m/github-psh-action@v0.6.0
+        uses: ad-m/github-push-action@v0.6.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: main      
+          branch: main      
 
