--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -23,7 +23,7 @@ jobs:
           
       - name: execute our script
         env: 
-          SOME_SECRET: ${{ secrets.SOME_SECRET }}
+          MY_SECRET: ${{ secrets.MY_SECRET }}
         run: python main.py
         
       - name: commit files
