--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,7 +2,8 @@ name: run main.py # file name
 
 on:
   schedule: 
-    - cron: '*/2 * * * *' # runs every 2 minutes
+    - cron: '*/1 * * * *' # runs every 2 minutes
+    # every 2 hours ---> 0 */2 * * *
 
 jobs:
   build:
