--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,8 +2,7 @@ name: run main.py # file name
 
 on:
   schedule: 
-    - cron: '*/1 * * * *' # runs every 1 minutes
-    # every 2 hours ---> 0 */2 * * *
+    - cron: '*/2 * * * *' # runs every 2 minutes
 
 jobs:
   build:
@@ -24,6 +23,7 @@ jobs:
           
       - name: execute our script
         env: 
+          MY_SECRET: ${{ secrets.MY_SECRET }}
         run: python main.py
         
       - name: commit files
@@ -35,5 +35,6 @@ jobs:
       - name: Push changes
         uses: ad-m/github-push-action@v0.6.0
         with:
+          github_token: ${{ secrets.GH_PAT }}
           branch: master
 
